--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="contacts-link">
               <svg class="icon-mail">
-                <use href="../images/icons.svg#icon-mail"></use>
+                <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -52,7 +52,7 @@
           <li class="contacts-item">
             <a href="tel:+380961111111" class="contacts-link"
               ><svg class="icon-mail">
-                <use href="../images/icons.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -78,7 +78,7 @@
             <li class="about-us-item">
               <div class="icon-background">
                 <svg class="icon-details parameters">
-                  <use href="../images/icons.svg#icon-details"></use>
+                  <use href="./images/icons.svg#icon-details"></use>
                 </svg>
               </div>
               <h3 class="about-us-title">Внимание к деталям</h3>
@@ -90,7 +90,7 @@
             <li class="about-us-item">
               <div class="icon-background">
                 <svg class="icon-timing parameters">
-                  <use href="../images/icons.svg#icon-timing"></use>
+                  <use href="./images/icons.svg#icon-timing"></use>
                 </svg>
               </div>
               <h3 class="about-us-title">Пунктуальность</h3>
@@ -102,7 +102,7 @@
             <li class="about-us-item">
               <div class="icon-background">
                 <svg class="icon-planning parameters">
-                  <use href="../images/icons.svg#icon-planning"></use>
+                  <use href="./images/icons.svg#icon-planning"></use>
                 </svg>
               </div>
               <h3 class="about-us-title">Планирование</h3>
@@ -114,7 +114,7 @@
             <li class="about-us-item">
               <div class="icon-background">
                 <svg class="icon-technologies parameters">
-                  <use href="../images/icons.svg#icon-technologies"></use>
+                  <use href="./images/icons.svg#icon-technologies"></use>
                 </svg>
               </div>
               <h3 class="about-us-title">Современные технологии</h3>
@@ -180,28 +180,28 @@
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-instagram button-icon">
-                      <use href="../images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-twitter button-icon">
-                      <use href="../images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link ">
                     <svg class="icon-facebook button-icon">
-                      <use href="../images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-linkedin button-icon">
-                      <use href="../images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -222,28 +222,28 @@
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-instagram button-icon">
-                      <use href="../images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-twitter button-icon">
-                      <use href="../images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link ">
                     <svg class="icon-facebook button-icon">
-                      <use href="../images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-linkedin button-icon">
-                      <use href="../images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -264,28 +264,28 @@
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-instagram button-icon">
-                      <use href="../images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-twitter button-icon">
-                      <use href="../images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link ">
                     <svg class="icon-facebook button-icon">
-                      <use href="../images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-linkedin button-icon">
-                      <use href="../images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -306,28 +306,28 @@
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-instagram button-icon">
-                      <use href="../images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-twitter button-icon">
-                      <use href="../images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link ">
                     <svg class="icon-facebook button-icon">
-                      <use href="../images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="" class="social-link">
                     <svg class="icon-linkedin button-icon">
-                      <use href="../images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -343,42 +343,42 @@
             <li class="clients-item"></li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-ya-co"></use>
+                  <use href="./images/icons.svg#icon-logo-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-tagline"></use>
+                  <use href="./images/icons.svg#icon-logo-tagline"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-company"></use>
+                  <use href="./images/icons.svg#icon-logo-company"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-foster"></use>
+                  <use href="./images/icons.svg#icon-logo-foster"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-brend"></use>
+                  <use href="./images/icons.svg#icon-logo-brend"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="clients-link">
                 <svg class="clients-icon">
-                  <use href="../images/icons.svg#icon-logo-tagline-last"></use>
+                  <use href="./images/icons.svg#icon-logo-tagline-last"></use>
                 </svg>
               </a>
             </li>
@@ -423,28 +423,28 @@
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg class="footer-button-icon">
-                    <use href="../images/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg class="footer-button-icon">
-                    <use href="../images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg class="footer-button-icon">
-                    <use href="../images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg class="footer-button-icon">
-                    <use href="../images/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
