--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@
                 <li class="contacts-item">
                     <a href="mailto:info@devstudio.com" class="contacts-link">
                         <svg class="icon-mail">
-                            <use href="../images/icons.svg#icon-mail"></use>
+                            <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
                     <a href="tel:+380961111111" class="contacts-link"><svg class="icon-mail">
-                            <use href="../images/icons.svg#icon-phone"></use>
+                            <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
@@ -178,28 +178,28 @@
                             <li class="footer-social-item">
                                 <a href="" class="footer-social-link">
                                     <svg class="footer-button-icon">
-                                        <use href="../images/icons.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-social-item">
                                 <a href="" class="footer-social-link">
                                     <svg class="footer-button-icon">
-                                        <use href="../images/icons.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-social-item">
                                 <a href="" class="footer-social-link">
                                     <svg class="footer-button-icon">
-                                        <use href="../images/icons.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-social-item">
                                 <a href="" class="footer-social-link">
                                     <svg class="footer-button-icon">
-                                        <use href="../images/icons.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
