--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
     <header class="header">
         <div class="header-container container">
             <nav class="nav-container">
-                <a href="/" class="logo link"><span class="first-part-of-logo">Web</span>Studio</a>
-                <ul class="main-nav list header-conteiner-list">
+                <a href="/" class="logo main-nav-item"><span class="first-part-of-logo">Web</span>Studio</a>
+                <ul class="main-nav header-container-list">
                     <li class="main-nav-item">
-                        <a href="./index.html" class="main-nav-link">Студия</a>
+                        <a href="./index.html" class="main-nav-link active">Студия</a>
                     </li>
                     <li class="main-nav-item">
-                        <a href="./portfolio.html" class="main-nav-link active">Портфолио</a>
+                        <a href="./portfolio.html" class="main-nav-link">Портфолио</a>
                     </li>
                     <li class="main-nav-item">
                         <a href="" class="main-nav-link">Контакты</a>
@@ -37,13 +37,13 @@
             <ul class="contacts-list">
                 <li class="contacts-item">
                     <a href="mailto:info@devstudio.com" class="contacts-link">
-                        <svg class="icon-mail">
+                        <svg class="icon-mail contact-icon">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
-                    <a href="tel:+380961111111" class="contacts-link"><svg class="icon-mail">
+                    <a href="tel:+380961111111" class="contacts-link"><svg class="contact-icon icon-phone">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -66,7 +66,7 @@
         </ul>
                 <ul class="projects-galery-list">
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img1.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                       <h2 class="example-of-projects">Технокряк</h2>
@@ -75,7 +75,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img2.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Постер <span lang="en">Orlean vs Golden Star</span></h2>
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img3.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Ресторан <span lang="en">Seafood</span></h2>
@@ -93,7 +93,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img4.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Проект <span lang="en">Prime</span></h2>
@@ -102,7 +102,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img5.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Проект <span lang="en">Boxes</span></h2>
@@ -111,7 +111,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img6.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects"><span lang="en">Inspiration has no Borders</span></h2>
@@ -120,7 +120,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img7.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Издание <span lang="en">Limited Edition</span></h32>
@@ -129,7 +129,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img8.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects">Проект <span lang="en">LAB</span></h2>
@@ -138,7 +138,7 @@
                 </a>
             </li>
             <li class="projects-galery-item">
-                <a href="" class="link">
+                <a href="" class="link projects-galery-link">
                     <img width: 370px src="./images/portfolio_images/img9.jpg" alt="наш роботы" />
                     <div class="description-galery-item">
                     <h2 class="example-of-projects"><span lang="en">Growing Business</span></h2>
@@ -150,64 +150,59 @@
             </div>
     </section>
 </main>
-    <footer class="footer">
-        <div class="container">
-            <ul class="footer-contacts-blocks">
-                <li>
-                    <a href="/" class="footer-logo"><span class="first-part-of-logo">Web</span><span
-                            class="footer-logo-second-part">Studio</span></a>
-                    <address class="footer-contacts">
-                        <ul class="footer-contacts-list">
-                            <li class="location footer-contacts-item">
-                                Киев, пр-т Леси Украинки, 26
-                            </li>
-                            <li class="footer-contacts-item">
-                                <a href="mailto:info@example.com" class="footer-contacts-link">info@example.com</a>
-                            </li>
-                            <li class="footer-contacts-item">
-                                <a href="tel:+380961111111" class="footer-contacts-link">+38 096 111 11 11</a>
-                            </li>
-                        </ul>
-                    </address>
-    
+<footer class="footer">
+    <div class="container footer-container">
+        <div class="footer-contacts-block">
+            <a href="/" class="footer-logo"><span class="first-part-of-logo">Web</span><span
+                    class="footer-logo-second-part">Studio</span></a>
+            <address class="footer-contacts">
+                <ul class="footer-contacts-list">
+                    <li class="location footer-contacts-item">
+                        Киев, пр-т Леси Украинки, 26
+                    </li>
+                    <li class="footer-contacts-item">
+                        <a href="mailto:info@example.com" class="footer-contacts-link">info@example.com</a>
+                    </li>
+                    <li class="footer-contacts-item">
+                        <a href="tel:+380961111111" class="footer-contacts-link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+        <div class="footer-social">
+            <h2 class="footer-social-title">ПРИСОЕДИНЯЙНЕСЬ</h2>
+            <ul class="footer-social-list">
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li>
-                    <div class="footer-social">
-                        <h2 class="footer-social-title">ПРИСОЕДИНЯЙНЕСЬ</h2>
-                        <ul class="footer-social-list">
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-button-icon">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-button-icon">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-button-icon">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-button-icon">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
         </div>
-    </footer>
+    </div>
+</footer>
   </body>
 </html>
