another one attempt

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
                 <a href="/" class="logo main-nav-item"><span class="first-part-of-logo">Web</span>Studio</a>
                 <ul class="main-nav header-container-list">
                     <li class="main-nav-item">
-                        <a href="./index.html" class="main-nav-link active">Студия</a>
+                        <a href="./index.html" class="main-nav-link">Студия</a>
                     </li>
                     <li class="main-nav-item">
-                        <a href="./portfolio.html" class="main-nav-link">Портфолио</a>
+                        <a href="./portfolio.html" class="main-nav-link  active">Портфолио</a>
                     </li>
                     <li class="main-nav-item">
                         <a href="" class="main-nav-link">Контакты</a>
